# MCU-Driver-ST

./: .gitmodules  CMakeLists.txt  LICENSE.md  README.md  RELEASE-NOTES.md
CMSIS/: CMakeLists.txt
CMSIS/CMSIS_5/CMSIS/TARGET_CORTEX_A/: CMakeLists.txt
CMSIS/CMSIS_5/CMSIS/TARGET_CORTEX_M/: CMakeLists.txt
TARGET_STM32L4/: CMakeLists.txt  flash_api.c  serial_device.c
TARGET_STM32L4/TARGET_STM32L475xG/TARGET_DISCO_L475VG_IOT01A/: PeripheralPinMaps.h
sdfx_st/.mbedbuild/: mbed_config_arm.cmake  mbed_config_gcc.cmake
sdfx_st/examples/: README.md  build_all.sh  clean_all.sh
sdfx_st/examples/analogin/: CMakeLists.txt  README.md
sdfx_st/examples/crc/: CMakeLists.txt  README.md
sdfx_st/examples/flash/: CMakeLists.txt  README.md
sdfx_st/examples/gpio/: CMakeLists.txt  README.md
sdfx_st/examples/interrupt/: CMakeLists.txt  README.md
sdfx_st/examples/pwm/: CMakeLists.txt  README.md
sdfx_st/examples/serial/: CMakeLists.txt  README.md
sdfx_st/examples/spi/: CMakeLists.txt  README.md
sdfx_st/examples/trace/: CMakeLists.txt  README.md
sdfx_st/examples/trng/: CMakeLists.txt  README.md
sdfx_st/examples/us_ticker/: CMakeLists.txt  README.md
sdfx_st/examples/us_ticker_delay/: CMakeLists.txt  README.md
sdfx_st/examples/us_ticker_interrupt/: CMakeLists.txt  README.md
sdfx_st/hal/: CMakeLists.txt
sdfx_st/hal/inc/: device.h  gpio_object.h
sdfx_st/hal/src/: crc_api.c  gpio_irq_api.c  i2c_api.c  mbed_overrides.c  pwmout_api.c  stm_spi_api.c
sdfx_st/tests/: README.md  build_all.sh  build_and_run_windows.sh  run_all.sh
sdfx_st/tests/mbed_hal/common_tickers/: CMakeLists.txt
sdfx_st/tests/mbed_hal/common_tickers_freq/: CMakeLists.txt
sdfx_st/tests/mbed_hal/crc/: CMakeLists.txt
sdfx_st/tests/mbed_hal/echo/: CMakeLists.txt
sdfx_st/tests/mbed_hal/trng/: CMakeLists.txt
sdfx_st/tests/mbed_hal/us_ticker/: CMakeLists.txt
sdfx_st/tests/mbed_hal/us_ticker_lp_ticker_common/: CMakeLists.txt
sdfx_st/tests/mbed_hal/us_ticker_lp_ticker_frequency/: CMakeLists.txt
sdfx_st/tests/mbed_hal_fpga_ci_test_shield/gpio/: CMakeLists.txt
sdfx_st/tests/mbed_hal_fpga_ci_test_shield/gpio_irq/: CMakeLists.txt
sdfx_st/tests/mbed_hal_fpga_ci_test_shield/uart/: CMakeLists.txt
